# pyRothC

./: .gitignore  README.md  pyproject.toml
notebooks/: develop.ipynb  pyRothC.ipynb  soil-cover.ipynb  vanGenuchten.ipynb
pyRothC/: RothC.py  RothC_Mediterranean.py  RothC_extensions.py  __init__.py  pedotransfer_functions.py
src/: RothC.py
tests/: conftest.py  test_rothc.py
tests/data/: 2years_results.csv  9years_results.csv
