[build-system]
requires = ["hatchling>=1.8.1"]
build-backend = "hatchling.build"

[project]
name = "pyRothC"
version = "0.0.3"
description = "Python version of The Rothamsted carbon model (RothC) 26.3. RothC is a model for the turnover of organic carbon in non-waterlogged topsoil that allows for the effects of soil type, temperature, soil moisture and plant cover on the turnover process."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  { name = "Misha Grol", email = "grol81@mail.ru" }
]
maintainers = [
  { name = "misha grol" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy>=1.20.3",
  "pandas>=1.3.4",
  "scipy>=1.7.3"
]
[project.optional-dependencies]
test = [
    "pytest"
]

[tool.setuptools.packages.find]

where = ["pyRothC"]
include = ["*"]


[project.urls]
Documentation = "https://mishagrol.github.io"
"Source code" = "https://github.com/mishagrol/pyRothC"
